--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "express": "^4.21.2",
     "geolib": "^3.3.3",
     "mongoose": "^8.19.3",
+    "node-cron": "^4.2.1",
     "node-fetch": "^2.7.0"
   },
   "devDependencies": {
